[package]
name = "photooxide"
version = "0.1.0"
authors = ["Guy Taylor <thebigguy.co.uk@gmail.com>"]
edition = "2018"

[dependencies]
google-photoslibrary1 = { git = "https://github.com/TheBiggerGuy/google-apis-rs", branch = "photoslibrary_str_int" }
fuse = "0.3.1"
hyper = "0.10"
hyper-rustls = "0.6"
yup-oauth2 = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "*"
env_logger = "*"
libc = "*"
log = "*"
chrono = "0.4"
users = "0.8"
scheduled-executor = "0.4"
derive-new = "0.5"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]
